<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vkboxxx.MainActivity" >

    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/-->
    
    <item
		 android:id="@+id/menu_clear_cache"
		 android:title="@string/cache_clear">
	</item>

    <item
        android:id="@+id/menu_cache_load"
        android:title="@string/cache_load"
        app:showAsAction="always">
    </item>

    <!--item
        android:id="@+id/menu_cache_save"
        android:title="@string/cache_save"
        app:showAsAction="always">
    </item-->

    <item
        android:id="@+id/menu_news_by_category"
        android:title="@string/news_by_category"
        >
    </item>

</menu>
