<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" tools:context="com.example.newsbox.newsbox.ArticleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll_id"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/news_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/response" />

                <TextView
                    android:id="@+id/news_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response" />

                <TextView
                    android:id="@+id/news_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/response" />

                <Button
                    android:id="@+id/buttonComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_comments"
                    android:layout_gravity="bottom"
                    />
                <Button
                    android:id="@+id/buttonOpenFullArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_full_article"
                    android:layout_gravity="bottom"
                    />
                <Button
                    android:id="@+id/buttonOpenFullArticleOffline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_full_article_offline"
                    android:layout_gravity="bottom"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
